[package]
name = "teensy3-rs-demo"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>", "James Munns <james.munns@gmail.com"]

[dependencies]
teensy3 = { git = "https://github.com/jamesmunns/teensy3-rs" }
# teensy3 = { path = "/Users/jamesmunns/Git/teensy3-rs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
