[package]
name = "teensy3-rs-demo"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>", "James Munns <james.munns@gmail.com>"]

[dependencies.teensy3]
git = "https://github.com/jamesmunns/teensy3-rs.git"
branch = "add-feature-flags"
features = ["teensy_3_2"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
